# AI-NewsParserBot-_-TecnoNews-_-JavaRush-Project-04-_-fin

./: .dockerignore  .gitignore  Dockerfile  README.md  _M4 Project FastAPI - telegram - ТЗ Проекта FastAPI + Телеграм.md  _Opisanie_proekta - 00 - 015_Project_newsbot_beautifulsoup.md  docker-compose.yml  docker-requirements.txt  env.example  main.py  pyproject.toml  requirements.txt
app/: api.py  config.py  filters.py  logger.py  schemas.py  tasks.py  utils.py
app/ai/: deepseek_client.py  generator.py  groqai_client.py  openai_client.py
app/news_parser/: __init__.py  habr.py  ixbt.py  main.py  sites.py  telegram.py  three_dnews.py  tproger.py  vc.py
app/telegram/: ai_in_bot.py  bot.py  publisher.py  run_bot.py
