[project]
name = "javarush-project-newsbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.123.8,<0.124.0)",
    "uvicorn[stadard] (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "openai (>=1.12.0,<2.0.0)",
    "groq (>=0.9.0,<1.0.0)",
    "telethon (>=1.34.0,<2.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "Jinja2 (>=3.1.2,<4.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "python-dateutil (>=2.8.2,<3.0.0)",
    "pytz (>=2024.1,<2026.0)",
    "typing-extensions (>=4.10.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
